# fdroidserver

./: .bandit  .editorconfig  .gitignore  .gitlab-ci.yml  .mailmap  .pylint-rcfile  .safety-policy.yml  .travis.yml  .weblate  .yamllint  CHANGELOG.md  CONTRIBUTING.md  FUNDING.yml  MANIFEST.in  README  README.buildserver  README.md  build.py  checkmarket.py  checkmarket2.py  checkupdates.py  commitupdate  commitupdates  common.py  config.buildserver.py  config.sample.py  fd-commit  fdroid  fdroid.py  fdroid.texi  gradlew-fdroid  import.py  jenkins-build  jenkins-build-all  jenkins-build-makebuildserver  jenkins-build.sh  jenkins-setup-build-environment  jenkins-test  makebs.config.sample.py  makebuildserver  (+17 more)
.pylint-plugins/: astng_hashlib.py
builder/: .gitignore  Vagrantfile
buildserver/: .gitignore  Dockerfile  Vagrantfile  config.buildserver.py  config.buildserver.yml  fixpaths.sh  gradle  provision-android-ndk  provision-android-sdk  provision-apt-get-install  provision-apt-proxy  provision-buildserverid  provision-disable-analytics  provision-gradle  provision-pip  provision-qt-sdk  provision-ubuntu-trusty-paramiko  provision-vagrant-insecure-private-key  setup-env-vars
completion/: bash-completion
dev/: fdroid_scan-binary.py
docker/: Dockerfile  Makefile  README.md  drozer.py  enable_service.py  entrypoint.sh  install_agent.py
docs/: .gitignore  fdl.texi  fdroid.html  fdroid.texi  gendocs.sh  gendocs_template  index_versions.md  makehtml.sh  update.sh
examples/: Vagrantfile.yaml  config.py  config.yml  fdroid_clean_repos.py  fdroid_export_keystore_to_nitrokey.py  fdroid_exportkeystore.py  fdroid_extract_repo_pubkey.py  fdroid_fetchsrclibs.py  fdroid_nitrokeyimport.py  makebs.config.py  makebuildserver.config.py  mirror-to-mirror.sh  opensc-fdroid.cfg  public-read-only-s3-bucket-policy.json  template.yml
fdroidserver/: __init__.py  __main__.py  _yaml.py  apksigcopier.py  btlog.py  build.py  build_local_run.py  checkupdates.py  common.py  deploy.py  destroy.py  dscanner.py  exception.py  exec.py  execute_sudo.py  fetch_repo.py  fetch_srclibs.py  github.py  gpgsign.py  import.py  import_subcommand.py  index.py  init.py  install.py  install_ndk.py  lint.py  looseversion.py  make_source_tarball.py  metadata.py  mirror.py  net.py  nightly.py  prepare_source.py  publish.py  pull.py  pull_verify.py  push.py  readmeta.py  rewritemeta.py  scanner.py  (+12 more)
getsig/: getsig.java  make.sh
hooks/: install-hooks.sh  pre-commit
locale/: Makefile  POTFILES.in  copy-antifeatures-translations-from-fdroidclient.py  fdroidserver.pot  pick-complete-translations.py
marketcheck/: README.txt  make.sh  run.sh  test.java
metadata/: An.stop.txt  aarddict.android.txt  android.androidVNC.txt  android.game.prboom.txt  apps.droidnotify.txt  arity.calculator.txt  as.adamsmith.iteration.txt  at.aichbauer.ical.txt  at.tomtasche.reader.txt  au.com.darkside.XServer.txt  cm.aptoide.pt.txt  (+261 more)
(+484 files in other folders)
