[metadata]
license_file = LICENSE

# uploading here requires Python 3.5.3+ or setuptools 27+,
# use instead: twine upload --sign dist/fdroidserver*.tar.gz
[aliases]
release = versioncheck compile_catalog sdist

# All this below is for Babel config.  Ideally we would only use
# Babel, but it is still missing some key features that gettext gives
# us.  So for now, this Babel setup is just to make it easy for Python
# people who are used to it.  Babel is missing:
#
# * properly tagging various Python formats in the comments
# * --add-location=file
# * --join-existing
# * --sort-output on update
#
# So for now the canonical way to update the template and translation
# files is: `make -C locale`

[extract_messages]
keywords = _
charset = UTF-8
sort_output = true
no_location = true
add-comments = true
output_file = locale/fdroidserver.pot
msgid-bugs-address = https://gitlab.com/fdroid/fdroidserver/issues

[update_catalog]
output_dir = locale
input_file = locale/fdroidserver.pot

[init_catalog]
input_file = locale/fdroidserver.pot
output_dir = locale

[compile_catalog]
domain = fdroidserver
directory = locale
