[metadata]
license_file = LICENSE

# publish with: twine upload --sign dist/fdroidserver*.tar.gz
[aliases]
release = versioncheck sdist

# All this below is for Babel config.  Ideally we would only use
# Babel, but it is still missing some key features that gettext gives
# us.  So for now, this Babel setup is just to make it easy for Python
# people who are used to it.  Babel is missing:
#
# * properly tagging various Python formats in the comments
# * --add-location=file
# * --join-existing
# * --sort-output on update
#
# So for now the canonical way to update the template and translation
# files is: `make -C locale`

[extract_messages]
keywords = _
charset = UTF-8
sort_output = true
no_location = true
add-comments = true
output_file = locale/fdroidserver.pot
msgid-bugs-address = https://gitlab.com/fdroid/fdroidserver/issues

[update_catalog]
output_dir = locale
input_file = locale/fdroidserver.pot

[init_catalog]
input_file = locale/fdroidserver.pot
output_dir = locale

[compile_catalog]
domain = fdroidserver
directory = locale

[pycodestyle]
ignore = E123,E203,E402,E501,W503
max-line-length = 88

[flake8]
ignore = E123,E203,E402,E501,W503
max-line-length = 88

# Settings for docstrings linter
# we use numpy stlye https://numpydoc.readthedocs.io/en/latest/format.html
# ignored errors are 
# * D10*: Missing docstring *
# * rest are the conventions which are ignored by numpy conventions according to http://www.pydocstyle.org/en/stable/error_codes.html 
[pydocstyle]
#convention = numpy # cannot be used in combination with ignore, so we list rules seperately.
ignore = D100,D101,D102,D103,D104,D105,D106,D107,D203,D212,D213,D402,D413,D415,D416,D417
